--- a/x64/Debug/Config.ini
+++ b/x64/Debug/Config.ini
@@ -41,8 +41,8 @@ Video_Format = 1
 ;Cam5 = server_name\NDI:"ViBox Live Gfx 5"
 ;PGM1_Dirty = SDI_7,SDI_8
 ;NETWORK:"sn121334",cam1
-
-Cam1 = FILE:"C:\\football.YUV"|"C:\\football.wav"
+;FILE:"/home/jiankang/Videos/football.YUV"|"/home/jiankang/Videos/football.wav"
+Cam1 = FILE:"/home/jiankang/Videos/football.YUV"|"/home/jiankang/Videos/football.wav"
 Cam2 =
 Cam3 =
 Cam4 = 
