--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,17 @@ cmake_minimum_required (VERSION 3.8)
 
 project ("test_NDI")
 add_definitions(-std=c++17)
+SET(CMAKE_BUILD_TYPE "Debug")
+SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
+SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
 
-if (MSVC_VERSION GREATER_EQUAL "1900")
-    include(CheckCXXCompilerFlag)
-    CHECK_CXX_COMPILER_FLAG("/std:c++latest" _cpp_latest_flag_supported)
-    if (_cpp_latest_flag_supported)
-        add_compile_options("/std:c++latest")
-    endif()
-endif()
+#if (MSVC_VERSION GREATER_EQUAL "1900")
+#    include(CheckCXXCompilerFlag)
+#    CHECK_CXX_COMPILER_FLAG("/std:c++latest" _cpp_latest_flag_supported)
+#    if (_cpp_latest_flag_supported)
+#        add_compile_options("/std:c++latest")
+#    endif()
+#endif()
 
 
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/inc/ffmpeg ${PROJECT_SOURCE_DIR}/inc/NDI)
