--- a/Lib.FrameConsumerNDI/Lib.FrameConsumerNDI.vcxproj
+++ b/Lib.FrameConsumerNDI/Lib.FrameConsumerNDI.vcxproj
@@ -233,6 +233,9 @@
     <ClCompile Include="AudioProcess.cpp" />
     <ClCompile Include="FrameConsumerNDI.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
