--- a/Lib.FrameProviderYuvFile/Lib.FrameProviderYuvFile.vcxproj
+++ b/Lib.FrameProviderYuvFile/Lib.FrameProviderYuvFile.vcxproj
@@ -212,6 +212,9 @@
     <ClCompile Include="FrameProviderYuvFile.cpp" />
     <ClCompile Include="WaveReader.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="CMakeLists.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
