--- a/Lib.Config/Lib.Config.vcxproj
+++ b/Lib.Config/Lib.Config.vcxproj
@@ -206,6 +206,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Text Include="CMakeLists.txt" />
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
