--- a/Lib.Config/Lib.Config.vcxproj.filters
+++ b/Lib.Config/Lib.Config.vcxproj.filters
@@ -16,6 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
+    <Text Include="CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IConfig.cpp">
