Video works now

--- a/Lib.FrameConsumerNDI/CMakeLists.txt
+++ b/Lib.FrameConsumerNDI/CMakeLists.txt
@@ -5,9 +5,9 @@
 # 并将名称保存到 DIR_LIB_SRCS 变量
 aux_source_directory(. DIR_LIB_FrameConsumerNDI_SRCS)
 add_definitions(-std=c++17)
-SET(CMAKE_BUILD_TYPE "Debug")
-SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
-SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
+#SET(CMAKE_BUILD_TYPE "Debug")
+#SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
+#SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
 
 set(OPENCV_DYNAMIC_LIBS  "${PROJECT_SOURCE_DIR}/lib")
 add_library(libndi_core SHARED IMPORTED )
@@ -16,7 +16,7 @@ set(mNDI_LIBS  libndi_core)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp ")
 link_libraries(${mNDI_LIBS} )
 
-#link_libraries(libavutil.so swresample.so)
+link_libraries(libavutil.so swresample.so)
 link_libraries(Lib.Base)
 # 生成链接库
 add_library (Lib.FrameConsumerNDI ${DIR_LIB_FrameConsumerNDI_SRCS})
