--- a/Linux/Config.ini
+++ b/Linux/Config.ini
@@ -41,7 +41,7 @@ Video_Format = 1
 ;PGM1_Dirty = SDI_7,SDI_8
 ;NETWORK:"sn121334",cam1
 
-Cam1 = FILE:"/home/jiankang/Videos/football.YUV"|"/home/jiankang/Videos/football.wav"
+Cam1 = FILE:"/home/jiankang/Videos/football.yuv"|"/home/jiankang/Videos/football.wav"
 Cam2 =
 Cam3 =
 Cam4 = 
